Split graphics and music, much more slides content
A lot of new content has been added including:
* All BASIC v2 keywords
* Instruction Set comparison
* VIC II registers overview, sprites, border color roll example.
* Improved assembly example
* C64 memory map

Also added VCS to comparison table and Pascal and K&R C to programming
languages. Some images still need to be auto-downloaded in the images
Makefile.

--- a/thanks_en.tex
+++ b/thanks_en.tex
@@ -85,8 +85,12 @@
 \frametitle{Special Thanks to - gfx}
 
 \begin{itemize}
+% breadbin comic
+\item Bart van Tieghem
 \item Bill Bertram
 \item Jozef Galanda
+% bleeding MSX
+\item Marco L
 % C1541 drive
 \item Nathan Beach
 % waveforms
@@ -94,6 +98,10 @@
 % trs80 image author:
 \item Rama
 \item Ruben de Rijcke
+% C64 back size
+\item Sammler
+% great giana sisters - sprite vergroesserung
+\item Werner
 \end{itemize}
 
 \end{frame}
