--- a/workshop_en.tex
+++ b/workshop_en.tex
@@ -40,6 +40,9 @@
 
 \section{Introduction}
 \section{Programming Environment}
+\section{BASIC programming}
+\section{Music}
+\section{Graphics}
 \section{Intermezzo's and Exercises}
 
 \section{Conclusions}
@@ -118,7 +121,7 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{EDSAC I/O}
+\frametitle{EDSAC Debugging}
 
 \begin{figure}
 \includegraphics[width=0.75\linewidth]{images/edsac_crts.jpg}
@@ -476,7 +479,7 @@
 \item 64 kilobytes of RAM
 \item MOS 6510 clocked at 0.985MHz (PAL)
 \item 2 joystick ports
-\item cartridge port (games!), serial I/O, user port
+\item Cartridge port (games!), serial I/O, user port
 \item 16 colors
 \end{itemize}
 
@@ -494,7 +497,7 @@ VIC-20 & 5120 & MOS 6502 & 1.11 \\
 C64 & 65536 & MOS 6510 & 0.985 \\ \hline
 Apple ][ & 4096 & MOS 6502 & 1 \\
 IBM PC & 16384 & i8086 & 4.04 \\
-ZX Spec. & 16384 & Z80 & 3.5 \\ \hline
+ZX Spectrum & 16384 & Z80 & 3.5 \\ \hline
 VCS & 128 & MOS 6507 & 1.19 \\
 NES & 2048 & Ricoh 2A03 & 1.6 \\ \hline
 \end{tabular}
@@ -544,7 +547,7 @@ NES & 2048 & Ricoh 2A03 & 1.6 \\ \hline
 
 \begin{itemize}
 \item Administration (spreadsheets, word, \dots)
-\item Scanning, printing (with dox matrix printer)
+\item Scanning, printing (with dot matrix printer)
 \item Games!
 \item Internet (using 50Kbps modem)
 \item Hardware upgrades
@@ -596,6 +599,19 @@ NES & 2048 & Ricoh 2A03 & 1.6 \\ \hline
 \begin{figure}
 \includegraphics[width=0.75\linewidth]{images/c64c_garage.jpg}
 \end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Software is still being written!}
+
+\begin{itemize}
+\item Magazines, newsletters, blogs, \dots
+\item Offence \& Prosonix - Area64
+\item Mayday! - Fallen Stars
+\end{itemize}
 
 \end{frame}
 
@@ -693,6 +709,21 @@ NES & 2048 & Ricoh 2A03 & 1.6 \\ \hline
 
 %----------------------------------------------
 
+\begin{frame}{Programming in BASIC}
+
+\begin{itemize}
+\item Easy to learn, easy to understand
+\item Already embedded in C64
+\item 68 BASIC commands
+\item Line numbered source code
+\item Numeric variables, strings, arrays
+\item Code/Data
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
 \begin{frame}[fragile]{Simple Program - BASIC}
 
 \begin{lstlisting}
@@ -704,114 +735,62 @@ NES & 2048 & Ricoh 2A03 & 1.6 \\ \hline
 
 %----------------------------------------------
 
-\begin{frame}{BASIC constructs}
+\begin{frame}[fragile]{Simple Program - BASIC}
+
+\begin{lstlisting}
+10 FOR I=0 TO 16
+20 PRINT 2^I, I
+30 NEXT I
+\end{lstlisting}
+
+\end{frame}
+
+%----------------------------------------------
+
+% is the same as
+\begin{frame}[fragile]{Simple Program - BASIC}
+
+\begin{lstlisting}
+10 FORI=0TO16
+20 PRINT2^I,I
+30 NEXTI
+\end{lstlisting}
+
+\end{frame}
+
+%----------------------------------------------
+
+% as well as
+\begin{frame}[fragile]{Simple Program - BASIC}
+
+\begin{lstlisting}
+10FORI=0TO16:PRINT2^I,I:NEXTI
+\end{lstlisting}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}{Intermezzo}
 
 \begin{itemize}
-\item Line numbered source code
-\item Numeric variables, strings, arrays
-\item Code/Data
+\item Go to https://www.github.com/FolkertVanVerseveld/workshop
+\item Download and unpack the release archive
+\item Try to solve some exercises
+\item Try to create a BASIC program
 \end{itemize}
 
 \end{frame}
 
 %----------------------------------------------
 
-\begin{frame}{BASIC commands}
+\begin{frame}{Assembly}
 
-\begin{multicols}{3}
 \begin{itemize}
-\item ABS
-\item AND
-\item ASC
-\item ATN
-\item CHR\$
-\item CLOSE
-\item CLR
-\item CMD
-\item CONT
-\item COS
-\item DATA
-\item DEF
-\item DIM
-\item END
-\item EXP
-\item FN
-\item FOR
-\item FRE
-\item GET
-\item GET\#
-\item GOSUB
-\item GOTO
-\item IF
-\item INPUT
-\item INPUT\#
-\item INT
+\item Simple, but steep learning curve
+\item 151 official instructions
+\item Small examples
 \end{itemize}
-\end{multicols}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}{BASIC commands}
-
-\begin{multicols}{3}
-\begin{itemize}
-\item LEFT\$
-\item LET
-\item LIST
-\item LOAD
-\item LOG
-\item MID\$
-\item NEW
-\item NEXT
-\item NOT
-\item ON
-\item OPEN
-\item OR
-\item PEEK
-\item $\pi$
-\item POKE
-\item POS
-\item PRINT
-\item PRINT\#
-\item READ
-\item REM
-\item RESTORE
-\item RETURN
-\item RIGHT\$
-\item RND
-\item RUN
-\item SAVE
-\item SGN
-\item SIN
-\end{itemize}
-\end{multicols}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}{BASIC commands}
-
-\begin{multicols}{3}
-\begin{itemize}
-\item SPC
-\item SQR
-\item STATUS
-\item STEP
-\item STOP
-\item STR\$
-\item SYS
-\item TAB
-\item TAN
-\item THEN
-\item TIME
-\item TIME\$
-\item VERIFY
-\item WAIT
-\end{itemize}
-\end{multicols}
 
 \end{frame}
 
@@ -847,18 +826,6 @@ rts
 
 %----------------------------------------------
 
-\begin{frame}{Assembly}
-
-\begin{itemize}
-\item Simple, but steep learning curve
-\item 151 official instructions
-\item Small examples
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
 \begin{frame}{Simple Program - assembly}
 
 \begin{tabular}{l|l|l|l}
@@ -883,7 +850,7 @@ Addr. & Mach. Code & Dissassembly & Pseudo Code \\
 \hline CPU & Regs & Reg Bits & Mul/Div \\ \hline
 8086 & 14 & 8/16 & Mul \& Div \\
 65XX & 6 & 8 & none \\
-Z80 & 16 & 8/16 & Mul \\ \hline
+Z80 & 14 & 8/16 & Mul \\ \hline
 \end{tabular}
 
 \end{frame}
@@ -997,19 +964,6 @@ BFFF & A000 & BASIC/ROM PLUG-IN & 8192 \\
 7FFF & 4000 & RAM & 16384 \\
 3FFF & 0000 & RAM & 16384 \\ \hline
 \end{tabular}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}{Simple Program}
-
-\begin{itemize}
-\item Go to: https://skilldrick.github.io/easy6502/
-\item Look at the examples.
-\item Try to create your own program!
-\end{itemize}
-
 
 \end{frame}
 
