--- a/hints.tex
+++ b/hints.tex
@@ -52,4 +52,10 @@ In dit document vindt u tips om de opgaven op te kunnen lossen.
 \problem Het aantal appels en bananen kunnen we elk in een variabele stoppen net als de prijs. Het printen van de resultaten is een kwestie van uitrekenen en uitwerken.
 Het is makkelijker om regelnummers met stappen van 5 of 10 op te volgen, want hierdoor kunt u er later nog regels tussen stoppen.
 
+\problem Spreekt voor zich. Lees de laatste zin van de vraag nog een keer.
+
+\problem \verb:POKE: is het tegenovergestelde van \verb:PEEK:.
+
+\problem Voeg een \verb:PRINT: toe voor regel 10 en pas de tekst bij regel 20 aan.
+
 \end{document}
